<resources>
    <string name="app_name">Worldwide News</string>
    <string name="search">Search</string>
    <string name="toolbar_title">\tName</string>
    <string name="general">General</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="c">C</string>
    <string name="settings">Settings</string>

    <string name="about">Search worldwide news Locate articles and breaking news headlines from news sources and blogs across the web</string>
</resources>